fixed mpu2 overflowing and misaligned

--- a/webroot/css/redesign.css
+++ b/webroot/css/redesign.css
@@ -66,8 +66,8 @@
 #demo-iframe #outer .image {
   position: relative;
   width: 33vmin;
-  height: 62vmin;
-  top: 7vmin;
+  height: 63vmin;
+  top: 6.5vmin;
 }
 
 
